--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+  <html lang="pt" class="light"></html>
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
